# Projeto-AED

./: .gitattributes  README.md
Projeto-AED/: CMakeLists.txt  Class.cpp  Class.h  Data.cpp  Data.h  Lesson.h  Schedule.cpp  Schedule.h  Student.cpp  Student.h  UC.cpp  UC.h  main.cpp
Projeto-AED/Classes/: Data.cpp  Data.h  Lesson.cpp  Lesson.h  Menu.cpp  Menu.h  Request.cpp  Request.h  Schedule.cpp  Schedule.h  Student.cpp  Student.h  UC.cpp  UC.h
Projeto-AED/docs/: ApresentacaoAEDg69.pptx  Doxyfile
Projeto-AED/docs/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _data_8cpp.html  _data_8cpp_8obj_8d.html  _data_8h.html  _data_8h_source.html  _lesson_8cpp.html  _lesson_8cpp_8obj_8d.html  _lesson_8h.html  _lesson_8h_source.html  _menu_8cpp.html  _menu_8cpp_8obj_8d.html  _menu_8h.html  _menu_8h_source.html  _request_8cpp.html  _request_8cpp_8obj_8d.html  _request_8h.html  _request_8h_source.html  _schedule_8cpp.html  _schedule_8cpp_8obj_8d.html  _schedule_8h.html  _schedule_8h_source.html  _student_8cpp.html  _student_8cpp_8obj_8d.html  _student_8h.html  _student_8h_source.html  _u_c_8cpp.html  _u_c_8cpp_8obj_8d.html  _u_c_8h.html  _u_c_8h_source.html  annotated.html  class_data-members.html  class_data.html  class_lesson-members.html  class_lesson.html  class_menu-members.html  class_menu.html  class_request-members.html  class_request.html  class_schedule-members.html  (+36 more)
Projeto-AED/docs/latex/: _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _data_8cpp.tex  _data_8h.tex  (+52 more)
Projeto-AED/schedule/: log.txt  students_classes.csv
(+39 files in other folders)
